# learn-streamlit-basics-app

./: pyproject.toml
src/streamlit_course/: __init__.py  basic_elements.py  data_display.py  interactive_widgets.py  layouts.py  main.py  simple_chatbot.py
