[project]
name = "streamlit-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hammad", email = "devhammad.m@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
]

[project.scripts]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
